--- a/style.less
+++ b/style.less
@@ -5,6 +5,9 @@
 
 body {
     background-color: #000;
+    & a {
+        color: #000;
+    }
 }
 
 .site-header {
@@ -13,6 +16,10 @@ body {
 
 .flash-wrap img {
     width: 100%;
+}
+
+.sidebar li {
+    list-style: none;
 }
 
 /** --------------------------------------------------------------
@@ -30,10 +37,16 @@ body {
     }
 }
 
+/** MAIN */
+
+.main {
+    padding: 20px;
+}
+
 .after-main {
     background-color: lighten(#97bebd, 15%);
     max-width: 950px;
-    width: 950px;
+    width: 100%;
     margin: auto;
     height: 90px;
     text-align: left;
@@ -44,10 +57,36 @@ body {
         float: left;
         padding-right: 5px;
     }
+    & .content {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
-@media screen and (max-width: 1400px) {
+/** FOOTER */
+
+.footer-column-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.footer-column-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.footer-column-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+/** MEDIA */
+
+@media screen and (max-width: 1300px) {
     .logo-1 {
         display: none;
+    }
+    .after-main {
+        height: auto;
     }
 }
