--- a/modules/regions.less
+++ b/modules/regions.less
@@ -4,7 +4,6 @@
 .wrap-all {
     margin: 0 auto;
     max-width: 950px;
-    background-color: #fff;
     bottom: 0;
 }
 
@@ -30,7 +29,7 @@
 
 .outer-wrap-footer {
     clear: both;
-    padding-bottom: 22px;
+    padding-bottom: 24px;
 }
 
 .site-footer {
@@ -68,7 +67,7 @@
 }
 
 .breadcrumb {
-    margin-bottom: 22px;
+    margin-bottom: @magicNumber;
 
     ul {
         margin: 0;
