--- a/style.less
+++ b/style.less
@@ -3,12 +3,7 @@
 */
 @import url(modules.less);
 
-body {
-    background-color: #000;
-    & a {
-        color: #000;
-    }
-}
+
 
 .site-header {
     background-color: #97bebd;
@@ -16,41 +11,43 @@ body {
 
 .flash-wrap img {
     width: 100%;
+    height: 100%;
 }
 
-.sidebar li {
-    list-style: none;
-}
+
 
 /** --------------------------------------------------------------
  *  Logo images
  */
-.logo-1 {
+/**.logo-1 {
     position: absolute;
     top: 70px;
     left: -140px;
-}
+}*/
 
-.site-logo-text-icon {
+/**.site-logo-text-icon {
     img {
         vertical-align: bottom;
     }
-}
+}*/
 
 /** MAIN */
 
-.main {
-    padding: 20px;
-}
+/**.main {
+    padding-left: 10px;
+    padding-right: 10px;
+}*/
 
-.after-main {
+
+/**.after-main {
     background-color: lighten(#97bebd, 15%);
     max-width: 950px;
     width: 100%;
     margin: auto;
-    height: 90px;
+    padding-bottom: 0;
+    height: @magicNumber * 4;
     text-align: left;
-    overflow: auto;
+    overflow: hidden;
     & img {
         width: 50px;
         display: block;
@@ -61,7 +58,7 @@ body {
         padding-left: 20px;
         padding-right: 20px;
     }
-}
+}*/
 
 /** FOOTER */
 
@@ -78,15 +75,4 @@ body {
 .footer-column-3 {
     padding-left: 10px;
     padding-right: 10px;
-}
-
-/** MEDIA */
-
-@media screen and (max-width: 1300px) {
-    .logo-1 {
-        display: none;
-    }
-    .after-main {
-        height: auto;
-    }
 }
