--- a/modules/navbar.less
+++ b/modules/navbar.less
@@ -10,14 +10,17 @@
 
     & li {
         text-decoration: none;
-        font-variant: small-caps;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        padding-top: 5px;
+        font-size: 80%;
         width: 60px;
         margin-right: @gutterWidth - 2.5px;
         text-align: center;
         margin-left: 0;
         &:hover {
-            background-color: lighten(#97bebd, 15%);
-            font-variant: small-caps;
+            text-transform: uppercase;
+            text-decoration: none;
         }
     }
     & a {
