--- a/modules/typo/typography.less
+++ b/modules/typo/typography.less
@@ -14,7 +14,9 @@ body {
 }
 
 .hgrid, .route-typography {
-    background-image: url(../img/horisontal-grid-24.png)
+    & .wrap-all {
+        background-image: url(../img/horisontal-grid-24.png);
+    }
 }
 
 nav div ul a {
