--- a/modules/regions.less
+++ b/modules/regions.less
@@ -7,6 +7,10 @@
     bottom: 0;
 }
 
+.flash-wrap img {
+    width: 80%;
+}
+
 .footer-column {
     float: left;
     width: 33%;
@@ -14,7 +18,6 @@
 
 .footer-column-wrapper {
     overflow: auto;
-    background-color: #97bebd;
 }
 
 .sidebar {
