--- a/modules.less
+++ b/modules.less
@@ -23,6 +23,9 @@
 
 @import url(grid/grid-float.less);
 
+
 //@import url(grid/grid-flex.less);
 
 @import url(grid/grid-helpers.less);
+
+@import url(figure.less);
