--- a/base.less
+++ b/base.less
@@ -18,7 +18,6 @@
     }
 }
 
-
 .sidebar {
     .column(2);
 }
@@ -48,7 +47,7 @@
 
 .navbar2 {
     .column(10);
-    float: left;
+    float: right;
     & li {
         list-style: none;
     }
@@ -70,6 +69,10 @@
         float: right;
         .push(0);
     }
+    &.has-sidebar-right {
+        float: left;
+        .push(0);
+    }
 }
 
 .next-previous {
@@ -88,9 +91,7 @@
     .column(10);
     .push(1);
     padding-bottom: @magicNumber;
-    img {
-        .column(2);
-    }
+
 }
 
 .colorcontainer {
@@ -117,6 +118,11 @@
 .flash-wrap img {
     width: 100%;
     height: 100%;
+}
+
+.author-byline {
+    display: inline-block;
+    padding: 5px;
 }
 
 
@@ -148,6 +154,8 @@
     position: relative;
     padding-bottom: @magicNumber;
 }
+
+
 /** MEDIA */
 
 @media screen and (max-width: 1450px) {
