--- a/modules/navbar.less
+++ b/modules/navbar.less
@@ -13,9 +13,9 @@
         text-transform: uppercase;
         letter-spacing: 2px;
         padding-top: 5px;
-        font-size: 80%;
+        font-size: 70%;
         width: 60px;
-        margin-right: @gutterWidth - 2.5px;
+        margin-right: 10px;
         text-align: center;
         margin-left: 0;
         &:hover {
