--- a/style.less
+++ b/style.less
@@ -26,6 +26,10 @@ body a {
     background-color: @wrap-all-color;
 }
 
+.flash-wrap img {
+    filter: grayscale(100%);
+}
+
 .outer-wrap-header {
     background-color: @header_color;
 }
