--- a/modules/navbar.less
+++ b/modules/navbar.less
@@ -14,7 +14,7 @@
         letter-spacing: 2px;
         padding-top: 5px;
         font-size: 70%;
-        width: 60px;
+        width: auto;
         margin-right: 10px;
         text-align: center;
         margin-left: 0;
